# srag_project

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
output/: sraghospitalizado_25set2024_microdados-1_texto.txt
srag_hospitalizados/: covid19_srag_hospitalizados_process_pdf.py  covid19_srag_hospitalizados_scraper.py
src/: ocupacao_hospitalar_covid.py  open_data_sus.py  open_data_sus2.py  srag_amazonas_scraper.py  srag_goias.py  vacinometro_covid_scrap.py
src/dados/srag_amazonas/raw/: raw_data_20250618_105530.json  raw_data_20250618_111059.json
vacinometro/: vacinometro_covid_scrap.py
