[project]
name = "srag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.13.4",
  "lxml>=5.4.0",
  "matplotlib>=3.10.3",
  "numpy>=2.3.0",
  "pandas>=2.2.3",
  "pypdf2>=3.0.1",
  "requests>=2.32.3",
  "selenium>=4.18.1",
  "tabula>=1.0.5",
]
